# cogmem-kos

./: .env.example  .gitignore  FUNCTIONAL_SPECIFICATION.md  LICENSE  PROVIDER_CONFIGURATION.md  README.md  cogmem-kos-framework.md  pyproject.toml  redesign.md  research.md
docs/: README.md  docs.json  introduction.mdx  quickstart.mdx  solo-mode.md
docs/api-reference/: entities.mdx  health.mdx  items.mdx  overview.mdx  search.mdx
docs/architecture/: adaptive-cognitive-plane.mdx  agents.md  agents.mdx  contracts.md  contracts.mdx  knowledge-workflows.mdx  overview.md  overview.mdx  providers.md  providers.mdx  retrieval-plans.md  retrieval-plans.mdx
docs/cookbooks/: entity-pages.mdx  integrations.mdx  overview.mdx  search-first.mdx
docs/platform/: configuration.mdx  installation.mdx  overview.mdx  solo-mode.mdx
examples/enterprise/: demo_entity_page.py  demo_search_first.py
examples/integrations/autogen/: demo_context_injection.py
examples/integrations/crewai/: demo_tool_calls_kos.py
examples/integrations/langchain/: demo_agent_calls_kos.py
examples/integrations/langgraph/: demo_node_calls_kos.py
src/kos/: __init__.py
src/kos/adapters/: __init__.py
src/kos/adapters/litellm/: __init__.py  gateway.py
src/kos/agents/: __init__.py  base.py
src/kos/agents/curate/: __init__.py  wikipedia_page_agent.py
src/kos/agents/enrich/: __init__.py  embed_agent.py
src/kos/agents/extract/: __init__.py  entity_extract_agent.py
src/kos/agents/index/: __init__.py  index_text_agent.py
src/kos/agents/ingest/: __init__.py  chunk_agent.py
src/kos/agents/planning/: __init__.py  memory_store.py  models.py  personal_planning_agent.py
src/kos/cli/: main.py
src/kos/cli/commands/: dev_server.py  dev_server_solo.py  init.py  run_worker.py
src/kos/core/: __init__.py
src/kos/core/acp/: __init__.py  meta_kernel.py  restructuring_executor.py  strategy_resolver.py
src/kos/core/contracts/: __init__.py  embeddings.py  llm.py  reranker.py
src/kos/core/events/: __init__.py  envelope.py  event_types.py
src/kos/core/jobs/: __init__.py  envelope.py  job_types.py
src/kos/core/models/: __init__.py  agent_action.py  artifact.py  claim.py  entity.py  ids.py  item.py  kernel_event.py  outcome_event.py  passage.py  strategy.py  (+1 more)
src/kos/kernel/: __init__.py
src/kos/providers/: __init__.py
tests/: __init__.py
tests/integration/: test_surrealdb_models.py
tests/unit/: test_events.py  test_models.py
(+70 files in other folders)
