[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogmem-kos"
version = "0.1.0"
description = "Framework-agnostic Knowledge Operating System kernel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "CogMem Team" }
]
keywords = ["knowledge-graph", "search", "retrieval", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
]
opensearch = [
    "opensearch-py>=2.4.0",
]
neo4j = [
    "neo4j>=5.0.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
surrealdb = [
    "surrealdb>=0.3.0",
]
sqlite = [
    "aiosqlite>=0.19.0",
]
objectbox = [
    "objectbox>=4.0.0",
]
litellm = [
    "litellm>=1.0.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
enterprise = [
    "cogmem-kos[api,postgres,opensearch,neo4j,qdrant,litellm]",
]
solo = [
    "cogmem-kos[api,surrealdb,litellm]",
]
local = [
    "cogmem-kos[api,sqlite,objectbox,litellm]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.26.0",
]
all = [
    "cogmem-kos[enterprise,langchain,dev]",
]

[project.scripts]
kos = "kos.cli.main:app"

[project.urls]
Homepage = "https://github.com/cogmem/cogmem-kos"
Documentation = "https://github.com/cogmem/cogmem-kos/docs"
Repository = "https://github.com/cogmem/cogmem-kos"

[tool.hatch.build.targets.wheel]
packages = ["src/kos"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
src = ["src", "tests"]

[tool.ruff.isort]
known-first-party = ["kos"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
